--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
      <p>#00FF00</p>
       <img
        <a href="https://en.wikipedia.org/wiki/Opuntia" target="_blank">
-               <a>This Is A Link To Wikipedia</a>
+              
                 <pr/>
-               <a href="https://www.wikipedia.org/">This Is A Link To Wikipedia</a>
+               <a href="https://www.wikipedia.org/">Wikipedia</a>
 
                       <a name="leo"></a>
                     <img src=""C:\Users\Leo\Pictures\city-lights-6288.jpg"" alt="Test" border="0" width="1920" height="1080">
