--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
      <pr/>
                 <pr/>
             
-            <img src="C:\Users\Leo\Desktop" alt="Testbild" border="1" width="100" height="100">      
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1c/FuBK_testcard_vectorized.svg" alt="Testbild" border="1" width="100" height="100">      
                <p></p> 
       <p></p> 
              <p></p> 
-           <a>Lugtige Links:<a/>
+           <a>Lustige Links:<a/>
              <p></p>  
             <a href="https://www.wikipedia.org/">Wikipedia</a>
      
