--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Alles nur ein Test</title>
 </head>
 <body>
-     
+     <BODY BACKGROUND="https://upload.wikimedia.org/wikipedia/commons/1/1c/FuBK_testcard_vectorized.svg" BGCOLOR="#000000" BGPROPERTIES="FIXED">
       <img src="https://upload.wikimedia.org/wikipedia/commons/1/1c/FuBK_testcard_vectorized.svg" alt="Testbild" border="0" width="1920" height="1080"> 
      <hr size="5" noshade>  
      <p>IDK<p/>
