--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                <p></p> 
       <p></p> 
              <p></p> 
-            <b>Lustige Links:</b> 
+            <h1><b>Lustige Links:</b> <h1/>
              <p></p>  
             <a href="https://www.wikipedia.org/">Wikipedia</a>
      
