--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                <p></p> 
       <p></p> 
              <p></p> 
-            <h1>Lustige Links:<h1/>
+            <h1>Lustige Links:
+                 <h1/>
              <p></p>  
             <a href="https://www.wikipedia.org/">Wikipedia</a>
      
