--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
      
   
-           <font color="white">
+           <font color="black">
           
      <hr size="5" noshade>  
      <p>IDK<p/>
