--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                
                <a href="https://trello.com/b/Dn0VvUWs">Wunschliste<a/>
                    
-
+          <hr size="5" noshade>  
 </font> 
 
 
