--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Alles nur ein Test</title>
-     <link rel="shortcut icon" href="https://github.com/leochras/leochras.github.io/blob/master/der_leochras.ico" />
+     <link rel="shortcut icon" href="ftp://leochras.bplaced.net/der_leochras.ico" />
 </head>
 <body>
      
