--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Alles nur ein Test</title>
-     <link rel="shortcut icon" href="file:///C:/Users/Leo/Desktop/Foto/der_leochras.png" />
+     <link rel="shortcut icon" href="https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai833GhPRkbjLmQ3y5XHjFG8jDpTeSks5Y7O6OwA%3D%3D" />
 </head>
 <body>
      
