--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
      
   
-           <font color="black">
+           <font color="black" font-family: 'Fira Sans', sans-serif;>
           
      <hr size="5" noshade>  
      <p>IDK<p/>
