--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
      
   
-           <font color="black" font-family: 'Fira Sans', sans-serif;>
-          
+           <font color="black" >
+          <font-family: 'Fira Sans', sans-serif;>
      <hr size="5" noshade>  
      <p>IDK<p/>
      <p>HALLO</p>
