--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      
   
            <font color="black" >
-          <font-family: 'Fira Sans', sans-serif;>
+               <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
      <hr size="5" noshade>  
      <p>IDK<p/>
      <p>HALLO</p>
