--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+     <style>
+body {
+    background-color: black;
+     font-family: 'Fira Sans', sans-serif;
+}
+
+
+</style>
 <title>Alles nur ein Test</title>
      <link rel="shortcut icon" href="https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai8zammi0H1f1MnOpSd90Iih51itIcks5Y7PEKwA%3D%3D" />
 </head>
