--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
      <style>
 body {
-    background-color: black;
+    background-color: lightblue;
      font-family: 'Fira Sans', sans-serif;
 }
 
