--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 </style>
-<title>Alles nur ein Test</title>
+<title>leochras</title>
      <link rel="shortcut icon" href="https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai8zammi0H1f1MnOpSd90Iih51itIcks5Y7PEKwA%3D%3D" />
 </head>
 <body>
