--- a/fotos.html
+++ b/fotos.html
@@ -2,12 +2,16 @@
 <html>
 <head>
 <title>Fotos</title>
-
+<style>
+  h1 {
+  font-family: 'Julius Sans One', sans-serif;
+  }
+  </style>
 </head>
 <body>
-<p>test</p>
+<h1>Alle Bilder können heruntergeladen und genutzt werden</h1>
 
-<iframe src="https://app.box.com/embed_widget/s/fd5jhkuh2fhqq7z1fmyn6n6p5c2u1h0j?view=list&sort=name&direction=ASC&theme=blue" width="500" height="400" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe>
+<iframe src="https://app.box.com/embed_widget/s/fd5jhkuh2fhqq7z1fmyn6n6p5c2u1h0j?view=list&sort=name&direction=ASC&theme=blue" width="1280" height="720" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe>
 
 </body>
 </html>
