--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                <p></p> 
       <p></p> 
              <p></p> 
+     <p>Kontakt: leo@traussnigg.com</p>
      <hr size="5" noshade>  
      
             <h1>Diverse Links:</h1>
