--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                <p></p> 
       <p></p> 
              <p></p> 
-     <p><u>Kontakt : leo@traussnigg.com</u></p>
+     <p><u>Kontakt :</u><a href="mailto:leo@traussnigg.com"></a>  </p>
      <hr size="5" noshade>  
      
             <h1>Diverse Links:</h1>
