--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                <p></p> 
       <p></p> 
              <p></p> 
-     <p><u>Kontakt :</u></p> <a href="mailto:leo@traussnigg.com"></a>  
+     <p>Kontakt:</p> <a href="mailto:leo@traussnigg.com">  
      <hr size="5" noshade>  
      
             <h1>Diverse Links:</h1>
