--- a/index.html
+++ b/index.html
@@ -69,5 +69,8 @@
            <hr size="5" noshade> 
            
            
+           <h1>Musik</h1>
+           <p>Kommt noch...</p>
+           <hr size="5" noshade> 
            </body>
 </html>
