--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
      <hr size="5" noshade>  
  
      <h1>WILLKOMMEN</h1>
+     
      <h2>ᕕ( ᐛ )ᕗ</h2>
-     <p>Erbaut am</p>
+     <p>Erbaut am:</p>
      <!--DATE-->04.04.2017 10:32:56<!--/DATE-->
      
      <p>Das ist leochras' Website</p>
