--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
           }
           h2 {
     font-family: 'Julius Sans One', sans-serif;
+    text-decoration: blink;      
           }
           
           body {
