--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
       <a href="http://stin.to/201xa" target="_blank"> Trash Chat<a/>
            <p></p>  
            <a href="http://stin.to/wlp7y" target="_blank"> Argumentativ und politisch korrekt</a>
-           
+           <p></p>
+            <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="http://www.htmlcommentbox.com/static/skins/default/skin.css" />
+ <script type="text/javascript" language="javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={  };} (function(){s=document.createElement("script");s.setAttribute("type","text/javascript");s.setAttribute("src", "http://www.htmlcommentbox.com/jread?page="+escape((window.hcb_user && hcb_user.PAGE)||(""+window.location)).replace("+","%2B")+"&opts=470&num=10");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
                     <hr size="5" noshade>
            
             <p></p>  
