--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
           
            <h1>Blog und Kommentare</h1>
 
-      <a href="http://stin.to/201xa" target="_blank"> Trash Chat<a/>
+      <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="http://www.htmlcommentbox.com/static/skins/default/skin.css" />
+           
+           <a href="http://stin.to/201xa" target="_blank"> Trash Chat<a/>
            <p></p>  
            <a href="http://stin.to/wlp7y" target="_blank"> Argumentativ und politisch korrekt</a>
            <p></p>
