--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
            
           
            <h1>Musik</h1>
-           <p>Kommt noch...</p>
+           <a> href="https://www.youtube.com/playlist?list=PLNmDmPvw4xpWHIjhsyKilfvyMqfFOmlBC" target="_blank">Meine Playlist</a>
+           <p>Mehr kommt noch...</p>
            <hr size="5" noshade> 
            </body>
 </html>
