--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <hr size="5" noshade>        
           
            <h1>Blog und Kommentare</h1>
-
+<a href="blog.html">Mein Blog</a>
            <!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
