--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
             <hr size="5" noshade>        
           
            <h1>Blog und Kommentare</h1>
+           
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5wFQ_rh0O9AENM3Bw7nAceH_CpqAa17-q6BHE5QDiWvj6Lw/viewform?usp=sf_link" target="_blank">Text einreichen</a>
 <a href="blog.html" target="_blank">Mein Blog</a>
            <p></p>
            <a href="comments.html" target="_blank">Comments</a>
