--- a/form.html
+++ b/form.html
@@ -4,35 +4,14 @@
         Form
     </title>
 
-<script type="text/javascript">
-
-var input = document.getElementById('textbox');
-         function namet()
-        {
-        alert(textbox.value);
-        }
-
-
-    var input2 = document.getElementById('location');   
-        function namet2()
-        {
-        alert(location.value);
-        }
- </script> 
-
-
-    </head>
-
- <body>
-
- Your name: 
- <input type="text" name="FirstName" id="textbox" <br><br/> 
-
- Your Address:
- <input type="text" name="address" id="location" <br></br>
-
- click:
- <input type="button" value="submit" onclick="namet()"/>
+<script 
+         type="text/javascript">
+function showConfirmationDialog() {
+    var textbox = document.getElementById('textbox');
+    var location = document.getElementById('location');
+    alert(textbox.value + '\n' + location.value);
+}
+</script>
 
  </body>
  </html>
