--- a/form.html
+++ b/form.html
@@ -5,11 +5,16 @@
     </title>
 
 <script 
-         type="text/javascript">
+        type="text/javascript">
 function showConfirmationDialog() {
     var textbox = document.getElementById('textbox');
     var location = document.getElementById('location');
     alert(textbox.value + '\n' + location.value);
+}
+
+...
+
+<input type="button" value="submit" onclick="showConfirmationDialog();" />
 }
 </script>
 
