--- a/test.html
+++ b/test.html
@@ -1,63 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
-xmlns:w="urn:schemas-microsoft-com:office:word"
-xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
-xmlns="http://www.w3.org/TR/REC-html40">
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=ProgId content=Word.Document>
-<meta name=Generator content="Microsoft Word 15">
-<meta name=Originator content="Microsoft Word 15">
-<link id=Main-File rel=Main-File href="../Physik-Test.htm">
-</head>
-
-<body lang=DE-AT>
-
-<div style='mso-element:footnote-separator' id=fs>
-
-<p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-normal'><span style='mso-special-character:footnote-separator'><![if !supportFootnotes]>
-
-<hr align=left size=1 width="33%">
-
-<![endif]></span></p>
-
-</div>
-
-<div style='mso-element:footnote-continuation-separator' id=fcs>
-
-<p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-normal'><span style='mso-special-character:footnote-continuation-separator'><![if !supportFootnotes]>
-
-<hr align=left size=1>
-
-<![endif]></span></p>
-
-</div>
-
-<div style='mso-element:endnote-separator' id=es>
-
-<p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-normal'><span style='mso-special-character:footnote-separator'><![if !supportFootnotes]>
-
-<hr align=left size=1 width="33%">
-
-<![endif]></span></p>
-
-</div>
-
-<div style='mso-element:endnote-continuation-separator' id=ecs>
-
-<p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-normal'><span style='mso-special-character:footnote-continuation-separator'><![if !supportFootnotes]>
-
-<hr align=left size=1>
-
-<![endif]></span></p>
-
-</div>
+<html>
+  
+  <body>
+      <iframe src="https://discordapp.com/widget?id=308188275905003521&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 
 </body>
 
