--- a/videos.html
+++ b/videos.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
 <html>
+  <title>Videos</title>
+  <link> https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai8zammi0H1f1MnOpSd90Iih51itIcks5Y7PEKwA%3D%3D />
 <body>
 <p>Meine Videos<p>
   <h1>Hier</h1>
