--- a/videos.html
+++ b/videos.html
@@ -2,7 +2,7 @@
 <html>
  <head>
    <title>Videos</title>
-  <link https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai8zammi0H1f1MnOpSd90Iih51itIcks5Y7PEKwA%3D%3D />
+  <link rel="shortcut icon" href= "https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai8zammi0H1f1MnOpSd90Iih51itIcks5Y7PEKwA%3D%3D" />
   </head>
    <body>
 <p>Meine Videos<p>
