--- a/test.html
+++ b/test.html
@@ -3,7 +3,13 @@
   
   <body>
       <iframe src="https://discordapp.com/widget?id=308188275905003521&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
-
+<div id="24lb_thread" class="lb_1394483"></div>
+<script type="text/javascript">
+(function() {
+var lb24 = document.createElement('script'); lb24.type = 'text/javascript'; lb24.id = '24lbScript'; lb24.async = true; lb24.charset="utf-8";
+lb24.src = '//v.24liveblog.com/embed/24.js?id=1394483';
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(lb24);})();
+</script>
 </body>
 
 </html>
