--- a/test.html
+++ b/test.html
@@ -2,7 +2,8 @@
 <html>
   
   <body>
-      <iframe src="https://discordapp.com/widget?id=308188275905003521&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+     
+    <iframe src="https://discordapp.com/widget?id=308188275905003521&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 <div id="24lb_thread" class="lb_1394483"></div>
 <script type="text/javascript">
 (function() {
@@ -10,6 +11,8 @@ var lb24 = document.createElement('script'); lb24.type = 'text/javascript'; lb24
 lb24.src = '//v.24liveblog.com/embed/24.js?id=1394483';
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(lb24);})();
 </script>
-</body>
+<iframe frameborder="0" class="lb24 lb_1394483" height="960px" width="100%" scrolling="auto" src="//v.24liveblog.com/live/?id=1394483"></iframe>
+    
+  </body>
 
 </html>
