--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                            
                            <p></p>
                           
-<a href="target="https://www.flickr.com/photos/155927484@N02_blank">Flickr (Das viiiiiiel bessere Instagram)<a/>
+<a href="https://www.flickr.com/photos/155927484@N02_blank" target="_blank">Flickr (Das viiiiiiel bessere Instagram)<a/>
 <p></p>
       <a href="fotos.html" target="_blank">Fotos<a/>
            <p></p>
