--- a/instagram.html
+++ b/instagram.html
@@ -2,7 +2,24 @@
 <html>
 <body>
 <head>
-<p> Hallo </p>
+<p>Hallo </p>
+  <h1> Instagram macht einfach vieles falsch: <h1>
+    Du willst ein Foto posten? Haha wir skalieren es herunter xDD
+    <p>
+    Du willst gute Fotografen finden? Lol schau dir lieber die geile Sandy an  (no front) 
+    <p>
+      Du willst Fotos für andere zur verfügung stellen: GEHT NICHT rofl
+    <p>
+      usw. usw.
+    <p>
+      ...
+    <p>
+      Instagram wurde in den letzen Jahren einfach immer mehr zum "Standart Social Network" und macht für einen ernsthaften Fotografen einfach keinen Sinn mehr..
+    <p>
+      Wer sucht heutzutage noch schöne Fotos auf Instagram, wenn man sie sich eh nur in einem 4:3 Format ansehen kann. 
+ <p>
+ </p>
+
 </head>
 </body>
 </html>
