--- a/instagram.html
+++ b/instagram.html
@@ -2,8 +2,10 @@
 <html>
 <body>
 <head>
-<p>Hallo </p>
-  <h1> Instagram macht einfach vieles falsch: <h1>
+ <p>Hallo </p>
+  </head>
+
+  <h1> Instagram macht einfach vieles falsch: </h1>
     Du willst ein Foto posten? Haha wir skalieren es herunter xDD
     <p>
     Du willst gute Fotografen finden? Lol schau dir lieber die geile Sandy an  (no front) 
@@ -18,8 +20,8 @@
     <p>
       Wer sucht heutzutage noch schöne Fotos auf Instagram, wenn man sie sich eh nur in einem 4:3 Format ansehen kann. 
  <p>
- </p>
 
-</head>
+
+
 </body>
 </html>
