--- a/instagram.html
+++ b/instagram.html
@@ -18,9 +18,11 @@
     <p>
       Instagram wurde in den letzen Jahren einfach immer mehr zum "Standart Social Network" und macht für einen ernsthaften Fotografen einfach keinen Sinn mehr..
     <p>
-      Wer sucht heutzutage noch schöne Fotos auf Instagram, wenn man sie sich eh nur in einem 4:3 Format ansehen kann. 
+      Wer sucht heutzutage noch schöne Fotos auf Instagram, wenn man sie sich eh nur in einem 4:3 Format ansehen kann?
  <p>
-
+  Ich hoffe, dass jetzt nicht alle Instagram Profi-Schulterfotografen/innen sich auch bei Flickr andmelden :(
+  <p>
+(Flickr ist nämlich nicht dafür gedacht euren Abschaum zu speichern)
 
 
 </body>
