--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                           
 <a href="https://www.flickr.com/photos/155927484@N02" target="_blank">Flickr (Das viiiiiiel bessere Instagram)<a/>
 <p></p>
-      <h3> <a href="instagram.html" target:"_blank"> Meine Meinung zu Instagram und wieso ich es nicht mehr benutzen werde: <a/> </h3>
+      <h3> <a href="instagram.html" target="_blank"> Meine Meinung zu Instagram und wieso ich es nicht mehr benutzen werde: <a/> </h3>
            <p></p>
       <a href="fotos.html" target="_blank">Fotos<a/>
            <p></p>
