--- a/happybday.html
+++ b/happybday.html
@@ -1,9 +1,26 @@
        <!DOCTYPE html>
 <html>
 <head>
+ <style>
 
+          h1 {
+    font-family: 'Julius Sans One', sans-serif;
+          }
+          h2 {
+    font-family: 'Julius Sans One', sans-serif;
+    text-decoration: blink;      
+          }
+          
+          body {
+    background-color: lightblue;
+     font-family: 'Fira Sans', sans-serif;
+              
+}
+
+
+</style>
 </head>
              <body>
-             Alles Gute.
+          404    Alles Gute.
              </body>
 </html>
