--- a/happybday.html
+++ b/happybday.html
@@ -12,7 +12,7 @@
           }
           
           body {
-    background-color: lightblue;
+    background-color: orange;
      font-family: 'Fira Sans', sans-serif;
               
 }
