--- a/happybday.html
+++ b/happybday.html
@@ -14,7 +14,7 @@
           body {
     background-color: orange;
      font-family: 'Fira Sans', sans-serif;
-                 font size="60"
+                 font-size: 60px;
               
 }
 
