--- a/happybday.html
+++ b/happybday.html
@@ -15,13 +15,13 @@
     background-color: orange;
      font-family: 'Fira Sans', sans-serif;
                  font-size: '60px';
-              
+              text-align: 'center';
 }
 
 
 </style>
 </head>
              <body>
-          404    Alles Gute.
+          404    Alles Gute.   404
              </body>
 </html>
