--- a/happybday.html
+++ b/happybday.html
@@ -20,7 +20,8 @@
 
 
 </style>
-</head>
+<title>HAPPYBDAY!</title>
+       </head>
              <body>
           404    Alles Gute.   404
              </body>
