--- a/happybday.html
+++ b/happybday.html
@@ -5,7 +5,10 @@
           
           body {
     background-color: orange;
-     font-size:'60px';
+    
+                 font-family: Fira Sans, sans-serif;
+                 font-size: 60px;
+              text-align: center;
 }
 
 
