--- a/happybday.html
+++ b/happybday.html
@@ -6,7 +6,7 @@
           body {
     background-color: orange;
     
-                 font-family: Fira Sans, sans-serif;
+                 font-family: 'Fira Sans', sans-serif;
                  font-size: 60px;
               text-align: center;
 }
