--- a/happybday.html
+++ b/happybday.html
@@ -16,8 +16,8 @@
 <title>HAPPYBDAY!</title>
        </head>
              <body>
-          404    Alles Gute.   404
-                    <br></br>
+             Alles Gute.  
+              <p>      
        404
        <p>
               404
