--- a/happybday.html
+++ b/happybday.html
@@ -68,5 +68,6 @@
               <p> 404
               <p> 404
               <p>
+                     Error: Cooler Geburtstagsspruch not found
              </body>
 </html>
