--- a/happybday.html
+++ b/happybday.html
@@ -19,7 +19,8 @@
              Alles Gute.  
               <p>      
        404
-       <p>
+                    <p> <script> document.write(2*7)</script>
+              <p>
               404
               <p>
                       404
