--- a/happybday.html
+++ b/happybday.html
@@ -19,7 +19,7 @@
              Alles Gute.  
               <p>      
        404
-                    <p> <script> document.write(2*7)</script>
+                    <p> Wow, du bist schon 2 Mal 7 Jahre alt ... <script> document.write(2*7)</script>
               <p>
               404
               <p>
