--- a/happybday.html
+++ b/happybday.html
@@ -19,8 +19,7 @@
              Alles Gute.  
               <p>      
        404
-                    <p> Wow, du bist schon 2 Mal 7 Jahre alt ... <script> document.write(2*7)</script>
-              <p>
+                  <p>
               404
               <p>
                       404
@@ -42,6 +41,8 @@
               <p>
                       404
               <p> 404
+              <p>
+                      Wow, du bist schon 2 Mal 7 Jahre alt ... <script> document.write(2*7)</script>
               <p>
                       404
               <p>
