--- a/happybday.html
+++ b/happybday.html
@@ -79,5 +79,7 @@
               <p> 404
               <p>
                      Error: Cooler Geburtstagsspruch not found
+                     
+                     <img src="https://images-na.ssl-images-amazon.com/images/I/51TFlWYwJTL._AC_SR201,266_.jpg" alt="Hoodie Allen" style="width:304px;height:228px;">
              </body>
 </html>
