--- a/ich.html
+++ b/ich.html
@@ -5,5 +5,13 @@
 
 </head>
 _________________________________________________________________________________________________________________________________
+  Ich heiße Leo und bin 14 Jahre alt.
+  <br>
+  Ich spiele leidenschaftlich Schlagzeug und bin im Musikverein Lieboch tätig.
+  <br>
+  Meine Hobbys sind Fotografieren, filmen und schneiden.
+  <br>
+  
+  
 </body>
 </html>
