--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,8 @@ body {
 <a href="leben">Aus Meinem Leben</a>
 <br>
 <a href="ich">Über Mich</a>
-
+<br>
+<a href="CooleSachen">Dinge, die erfunden werden sollten</a>
 </head>
 
 </body>
