--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@ body {
 <br>
 <a href="ich">Über Mich</a>
 <br>
-<a href="CooleSachen">Dinge, die erfunden werden sollten</a>
+<a href="CooleSachen.html">Dinge, die erfunden werden sollten</a>
 </head>
 
 </body>
