--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                       <a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">Youtube<a/>
           
                            <p></p> 
+                           <a href="vid.me" target="_blank">Oder folgt mir auf YouTube 2.0 (Vid.me)<a/>
+                         
                            <div class="vidme-widget" data-type="follow" data-user="17615358" data-label="short" data-show-count="true"></div>
 <script>
     (function (window, document) {
