--- a/index.html
+++ b/index.html
@@ -104,9 +104,8 @@
 <p></p>
       <h3> <a href="instagram.html" target="_blank"> Meine Meinung zu Instagram und wieso ich es nicht mehr benutzen werde: <a/> </h3>
            <p></p>
-      <a href="fotos.html" target="_blank">Fotos<a/>
-           <p></p>
-           <a href="videos.html" target="_blank">Videos<a/>           
+      
+           <a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">Videos<a/>           
             <hr size="5" noshade>        
           
 <h1>Blog und Kommentare</h1>
