--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,10 @@ body {
 <a href="ich">Über Mich</a>
 <br>
 <a href="coolesachen">Dinge, die erfunden werden sollten</a>
-</head>
+
+   <a href="instagram">Meine Meinung zu Instagram und wieso ich es nicht mehr benutzen werde</a>
+   
+   </head>
 
 </body>
 </html>
