--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 
 
 </style>
+     
+     <style>
+body {
+        background-image: url(" ");
+} 
+ 
+</style>
+     
 <title>leochras</title>
      <link rel="shortcut icon" href="https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai89y_FFsKHbHdRYkDSv1eGENSLE5tks5ajG9CwA%3D%3D" />
 </head>
