--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      
      <style>
 body {
-        background-image: url(" ");
+        background-image: url("https://github.com/leochras/leochras.github.io/blob/master/schnee.JPG");
 } 
  
 </style>
