--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           }
           
           body {
-     background-image: url("https://github.com/leochras/leochras.github.io/blob/master/schnee.JPG");
+     background-image: url("leochras.github.io/schnee.JPG");
      font-family: 'Fira Sans', sans-serif;
               
 }
