--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           }
           
           body {
-     background-image: url("leochras.github.io/background2.png");
+     background-colour: 7289da;
      font-family: 'Fira Sans', sans-serif;
               
 }
