--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           }
           
           body {
-     background-colour: 7289da;
+     background-colour: #7289da;
      font-family: 'Fira Sans', sans-serif;
               
 }
