--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           }
           
           body {
-     background-colour: hex(114,137,218);
+     background-colour: rgb(114,137,218);
      font-family: 'Fira Sans', sans-serif;
               
 }
