--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     text-decoration: blink;      
           }
           .center {
-    margin: auto;
-    width: 100%;
+ text-align: center;
                }
           body {
      background-colour: rgb(114,137,218);
