--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 LINK
 
 a:link {
-    color: rgb(102, 153, 255);
+    color: rgb(60, 178, 88);
     background-color: transparent;
     text-decoration: none;
 }
@@ -18,7 +18,7 @@ a:hover {
 
 a:visited {
     color:  rgb(60, 178, 88);
-    background-color: black;
+    background-color:  rgb(78, 255, 90);
     text-decoration: none;
 }
 
