--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ font-family: 'Amiko', sans-serif;
  
      <p>Erbaut am: 04.04.2017</p>
      
-     <a href="https://docs.google.com/forms/d/e/1FAIpQLScAMlFOcVMhgekoMy-S8BJswYt_6F1xPxtRao2n3xgS6AQhsw/viewform?usp=sf_link" target="_blank">Nachricht hinterlassen</a>
+     <a href="https://docs.google.com/forms/d/e/1FAIpQLScAMlFOcVMhgekoMy-S8BJswYt_6F1xPxtRao2n3xgS6AQhsw/viewform?usp=sf_link" target="_blank">Nachricht hinterlassen, Fragen stellen, oder einfach Hallo sagen</a>
      <br> 
      <p>Kontakt: <a href="http://scr.im/leochras" target="_blank">Email</a>  </p>
      <p>Business: <a href="http://scr.im/krass">Email</a>  </p>
