--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ font-family: 'Amiko', sans-serif;
                       <a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">Youtube<a/>
            <p></p>         
           
-<h1>href="blog.html" target="_blank">Mein Blog</h1>
+<h1> <a href="blog.html" target="_blank">Mein Blog <a/> </h1>
 
 
  <h1>Musik</h1>
