--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ font-family: 'Amiko', sans-serif;
                <p></p>  
                <a href="https://twitter.com/leochras" target="_blank">Twitter<a/>
 
+		        <a href="blog.html" target="_blank">Mein Blog <a/> 
 
 <h1>Fotos und Videos:</h1>
                 
@@ -91,9 +92,6 @@ font-family: 'Amiko', sans-serif;
                       <a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">Youtube<a/>
            <p></p>         
           
-<h1> <a href="blog.html" target="_blank">Mein Blog <a/> </h1>
-
-
  <h1>Musik</h1>
             <a href="https://www.youtube.com/playlist?list=PLNmDmPvw4xpWHIjhsyKilfvyMqfFOmlBC" target="_blank">Meine Playlist<a/>
          <p> </p>
