--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:visited {
  text-align: center;
                }
           body {
-      background-image: url("leochras.github.io/DSC_0052.JPG");
+      background-color: #ede6e6;
 	font-family: 'Amiko', sans-serif;              
 }
 
