--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:visited {
  text-align: center;
                }
           body {
-      background-color: #fc0202;
+      background-color: #d1c7a7;
 	font-family: 'Amiko', sans-serif;              
 }
 
