--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@ a:link {
     background-color: transparent;
     text-decoration: none;
 }
-          h1 {
+      a:visited {
+    color: rgb(60, 178, 88);
+    background-color: transparent;
+    text-decoration: none;
+}
+	     
+	     h1 {
     font-family: 'Julius Sans One', sans-serif;
 	font-size: 35px;
 
