--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ a:link {
           }
           h2 {
     font-family: 'Julius Sans One', sans-serif;    
+		  font-size: 20px;
           }
           .center {
  text-align: center;
@@ -40,7 +41,7 @@ a:link {
 
  <div class="center">
  
-     <h>WILLKOMMEN</h1>
+     <h1>WILLKOMMEN</h1>
  
      <p>Erbaut am: 04.04.2017</p>
      <a href="https://docs.google.com/forms/d/e/1FAIpQLScAMlFOcVMhgekoMy-S8BJswYt_6F1xPxtRao2n3xgS6AQhsw/viewform?usp=sf_link" target="_blank">Nachricht hinterlassen</a>
