--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ a:link {
 
 <h2>Friends</h2>
      
-      <a href="https://github.com/valestad" target="_blank">valestad<a/>       
+      <a href="https://plu.us/vale" target="_blank">valestad<a/>       
 <p></p>  
 
 <h2>Diverse Links:</h2>
