--- a/ich.html
+++ b/ich.html
@@ -6,13 +6,13 @@
 </head>
 _________________________________________________________________________________________________________________________________
   <p></p>
-  Ich heiße Leo und bin 14 Jahre alt.
+  Ich heiße Leo und bin 15 Jahre alt.
   <br>
   Ich spiele leidenschaftlich Schlagzeug und bin im Musikverein Lieboch tätig.
   <br>
-  Meine Hobbys sind Fotografieren, filmen und schneiden.
+  Meine Hobbys sind Fotografieren, filmen und Musik machen.
   <br>
-  
+  Manche Leute sagen ich sei Choleriker, weil ich mich gerne über Dinge aufrege, aber ich bin halt so.. 
   
 </body>
 </html>
