--- a/CooleSachen.html
+++ b/CooleSachen.html
@@ -3,6 +3,6 @@
 <body>
 Es wurden noch nicht genug coole Sachen erfunden..
 <p>
-Coole wär aber eine Samrte Steckdose, die sich abschaltet, wenn das Smartphone voll aufgeladen ist.
+Coole wär aber eine smarte Steckdose, die sich abschaltet, wenn das Smartphone voll aufgeladen ist.
 </body>
 </html>
