--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ a:link {
 	     
 	     h1 {
     font-family: 'Julius Sans One', sans-serif;
-	font-size: 35px;
+	font-size: 40px;
 
           }
           h2 {
     font-family: 'Julius Sans One', sans-serif;    
-		  font-size: 25px;
+		  font-size: 30px;
           }
           .center {
  text-align: center;
@@ -41,12 +41,12 @@ a:link {
 
  <div class="center">
  
-     <h1>WILLKOMMEN</h1>
+	 
+ <h1>WILLKOMMEN</h1>
  
-     <p>Erbaut am: 04.04.2017</p>
-     <a href="https://docs.google.com/forms/d/e/1FAIpQLScAMlFOcVMhgekoMy-S8BJswYt_6F1xPxtRao2n3xgS6AQhsw/viewform?usp=sf_link" target="_blank">Nachricht hinterlassen</a>
-     <br> 
-    
+    		<p>Erbaut am: 04.04.2017</p>
+    		<a href="https://docs.google.com/forms/d/e/1FAIpQLScAMlFOcVMhgekoMy-S8BJswYt_6F1xPxtRao2n3xgS6AQhsw/viewform?usp=sf_link" target="_blank">Nachricht hinterlassen</a> 
+	 
 <p></p>  
 
 <h2>Diverse Links:</h2>
@@ -55,7 +55,7 @@ a:link {
 <p></p>  
 	     	<a href="https://twitter.com/leochras" target="_blank">Twitter<a/>
 <p></p> 
-    		<a href="https://kit.com/leochras/my-gear" target="_blank" class="glow">Mein Equipmentr</a>
+    		<a href="https://kit.com/leochras/my-gear" target="_blank" class="glow">Mein Equipment</a>
 <p></p>  
           	<a href="https://discord.gg/R9CCATy" target="_blank" class="glow">Bester Discord Server</a>
 <p></p>  
