--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@ a:link {
           .center {
  text-align: center;
 }
+	     .left {
+	text.align: left;
+}
           body {
       background-color: #e0dbc9;
-	font-family: 'Amiko', sans-serif;              
+	font-family: 'Amiko', sans-serif;   
+		  font-size: 18px;
 }
 
 </style>
@@ -75,7 +79,7 @@ a:link {
           
 		<a href="https://www.youtube.com/playlist?list=PLNmDmPvw4xpWHIjhsyKilfvyMqfFOmlBC" target="_blank">Meine Playlist<a/>
 <p></p>
-                <a href="https://soundcloud.com/leochras" target="_blank"> Mein Soundcloud<a/>
+                <a href="https://soundcloud.com/leochras" target="_blank">Soundcloud<a/>
 <p></p>        
 
 			 <p></p> 
