--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ a:link {
 <p></p>                  
 		<a href="https://www.flickr.com/photos/155927484@N02" target="_blank">Flickr (Das Instagram für Fotografen)<a/>
 <p></p>
-                <a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">Youtube<a/>
+                <a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">YouTube<a/>
 <p></p>         
           
  <h2>Musik</h2>
@@ -81,16 +81,12 @@ a:link {
 <p></p>
                 <a href="https://soundcloud.com/leochras" target="_blank">Soundcloud<a/>
 <p></p>        
-
-			 <p></p> 
-	 		 <p></p> 
-			 <p></p> 
-			 <p></p> 
-			 <p></p> 
-			 <p></p> 
-			 <p></p> 
- <a href="test.html" target="_blank">test</a>      
+		
+ 
 			 <p></p>          
   </div>
- </body>
+ <div class="center">
+			<a href="test.html" target="_blank">test</a>      
+			</div>
+			</body>
 </html>
