--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ a:link {
  
 			 <p></p>          
   </div>
- <div class="center">
+ <div class="left">
 			<a href="test.html" target="_blank">test</a>      
 			</div>
 			</body>
