--- a/index.html
+++ b/index.html
@@ -35,11 +35,22 @@ a:link {
 		  font-size: 16px;
 }
 
+	     @media only screen and (device-width: 1280px),
+only screen and (max-width:1280px) {
+.css-element {
+yourcsscode:;
+}
+   }
+	     
 </style>
      
 	<title>leochras</title>
      		<link rel="shortcut icon" href="https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai89y_FFsKHbHdRYkDSv1eGENSLE5tks5ajG9CwA%3D%3D" />
-</head>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, 
+user-scalable=no">
+	
+	</head>
 
 
 	<body>
