--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@ a:link {
 }
 	     
 	     h1 {
-    font-family: 'Julius Sans One', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 	font-size: 40px;
 
 }
           h2 {
-    font-family: 'Julius Sans One', sans-serif;    
+    font-family: 'Josefin Sans', sans-serif;   
 		  font-size: 25px;
 }
           .center {
