--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@ a:link {
 		  font-size: 16px;
 }
 
-	     @media only screen and (device-width: 1280px),
-only screen and (max-width:1280px) {
-.css-element {
-yourcsscode:;
-}
+	  
    }
 	     
 </style>
@@ -67,7 +63,7 @@ user-scalable=no">
 
 <h2>Diverse Links:</h2>
 	 
-    		<a href="https://plu.us/vale" target="_blank">valestad (Krasser Typ)<a/>   
+    		<a href="https://twitter.com/valestad" target="_blank">valestad<a/>   
 <p></p>  
 	     	<a href="https://twitter.com/leochras" target="_blank">Twitter<a/>
 <p></p> 
