--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ a:link {
 	     h1 {
     font-family: 'Josefin Sans', sans-serif;
 	font-size: 40px;
-		 color:B2983C;
+		 color: #B2983C;
 
 }
           h2 {
