--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@ user-scalable=no">
 			 <p></p>          
   </div>
  <div class="left">
+	 <style>
+		a:link {
+    color: #e0dbc9;
+    background-color: transparent;
+    text-decoration: none;
+}
+      a:visited {
+    color: #e0dbc9;
+    background-color: transparent;
+    text-decoration: none;
+}	
+			</style>
 			<a href="test.html" target="_blank">test</a>      
 			</div>
 			</body>
