--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:link {
 <head>
 	
 	<title>leochras</title>
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai8_yMMXPZJQefWwC813G-dIoduYtjks5bYrFxwA%3D%3D" />
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai8-hFCvah17n5Vn8nL92WFB56WFt_ks5bgq58wA%3D%3D" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, 
 user-scalable=no">
@@ -82,7 +82,7 @@ user-scalable=no">
                 <a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">YouTube<a/>
 <p></p>         
           
- <h2>Musik</h2>
+ <h2>Musik:</h2>
           
 		<a href="https://www.youtube.com/playlist?list=PLNmDmPvw4xpWHIjhsyKilfvyMqfFOmlBC" target="_blank">Meine Playlist<a/>
 <p></p>
