--- a/ich.html
+++ b/ich.html
@@ -6,13 +6,13 @@
 </head>
 _________________________________________________________________________________________________________________________________
   <p></p>
-  Ich heiße Leo und bin 15 Jahre alt.
+ Ich ,Leo, 15:
   <br>
-  Ich spiele leidenschaftlich Schlagzeug und bin im Musikverein Lieboch tätig.
+ ...spiele gerne Schlagzeug.
   <br>
-  Meine Hobbys sind Fotografieren, filmen und Musik machen.
+ ...meine Hobbys sind Fotografieren, filmen und Musik machen.
   <br>
-  Manche Leute sagen ich sei Choleriker, weil ich mich gerne über Dinge aufrege, aber ich bin halt so.. 
+  ...manche Leute sagen ich sei Choleriker, weil ich mich gerne über Dinge aufrege. 
   
 </body>
 </html>
