--- a/blog.html
+++ b/blog.html
@@ -2,11 +2,10 @@
 <html>
 <title>Blog</title>
 <style>
-body {
-   height: 200px;
-  line-height: 120px;
-  text-align: center;
-  border: 0px dashed #f69c55;
+          body {
+      background-color: #e0dbc9;
+	font-family: 'Amiko', sans-serif;   
+		  font-size: 16px;
 }
          a {
          font-family: Courier New;
