--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,9 @@
 <style>
           body {
       background-color: #e0dbc9;
-	font-family: 'Amiko', sans-serif;   
-		  font-size: 16px;
+	  font-family: 'Amiko', sans-serif;   
+		  font-size: 14px;
+		  	vertical-align:middle;
 }
          a {
          font-family: Courier New;
@@ -14,10 +15,8 @@
            vertical-align:middle;
             height: 90px;
              text-align: center;
-
               display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
+		line-height: small;
   }
 </style>
    
