--- a/blog.html
+++ b/blog.html
@@ -20,9 +20,9 @@
   }
 </style>
    
-<a href="ich">Über Mich</a>
+<a href="ich.html">Über Mich</a>
 <br>
-<a href="coolesachen">Dinge, die erfunden werden sollten</a>
+<a href="coolesachen.html">Dinge, die erfunden werden sollten</a>
 
    </head>
 
