--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ a:link {
 	
 	<title>leochras</title>
   <link rel="shortcut icon" href="https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai8-hFCvah17n5Vn8nL92WFB56WFt_ks5bgq58wA%3D%3D" />
-		
+<meta name="viewport" content="width=device-width">
+
 </head>
 
 
