--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:link {
 <head>
 	
 	<title>leochras</title>
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.ico?token=APai8-hFCvah17n5Vn8nL92WFB56WFt_ks5bgq58wA%3D%3D" />
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/leochras/leochras.github.io/master/der_leochras.png?token=APai80JMJ6ifUlN_vbZkXHzpIC43cgUDks5b8GkjwA%3D%3D" />
 <meta name="viewport" content="width=device-width">
 
 </head>
