--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ a:link {
 	 
     		<a href="https://twitter.com/valestad" target="_blank">Krasser Typ: valestad<a/>   
 <p></p>  
+		<a href="https://www.instagram.com/stefan_strallhofer/" target="_blank">Rap King:<a/>   
+<p></p>  
 	     	<a href="https://twitter.com/leochras" target="_blank">Twitter<a/>
 <p></p> 
     		<a href="https://kit.com/leochras/my-gear" target="_blank" class="glow">Mein Equipment</a>
