--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a:link {
 	 
     		<a href="https://twitter.com/valestad" target="_blank">Krasser Typ: valestad<a/>   
 <p></p>  
-		<a href="https://www.instagram.com/stefan_strallhofer/" target="_blank">King of Rimes: Stefan Strallhofer<a/>   
+		<a href="https://www.instagram.com/stefan_strllhfr/" target="_blank">King of Rimes: Stefan Strallhofer<a/>   
 <p></p>  
 	     	<a href="https://twitter.com/leochras" target="_blank">Twitter<a/>
 <p></p> 
