--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:link {
 <head>
 	
 	<title>leochras</title>
-  <link rel="shortcut icon" href="https://drive.google.com/file/d/1J1Y8d-3eSQCaaGkUxhxBhqQ1W8qZ0dZT/view" />
+  <link rel="shortcut icon" href="https://leochras.github.io/leochraskleiner.png" />
 <meta name="viewport" content="width=device-width">
 
 </head>
