--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@ a:link {
 		<a href="https://www.youtube.com/playlist?list=PLNmDmPvw4xpWHIjhsyKilfvyMqfFOmlBC" target="_blank">Meine Playlist<a/>
 <p></p>
                 <a href="https://soundcloud.com/leochras" target="_blank">Soundcloud<a/>
-<p></p>        
+<p></p>
+			<a href="https://open.spotify.com/artist/2qpsljlKwtCMGe7OsiT7qx" target="_blank">Spotify<a/>
+			
 			
   </div>
 
