--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ a:link {
 
 <h2>Fotos und Videos:</h2>
                 
-		<a href="https://www.instagram.com/der_leochras/" target="_blank">Instagram<a/>                    
+		<a href="https://www.instagram.com/_leochras/" target="_blank">Instagram<a/>                    
 <p></p>                  
 		<a href="https://www.flickr.com/photos/155927484@N02" target="_blank">Flickr (Das Instagram für Fotografen)<a/>
 <p></p>
