--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <style>
 
 a:link {
-    color: rgb(1,1,1);
+    color: rgb(60, 178, 88);
     background-color: transparent;
     text-decoration: none;
 }
