--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ a:link {
 	
 	<title>leochras</title>
   <link rel="shortcut icon" href="https://leochras.github.io/gradient-small.png" />
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 
 </head>
 
