--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ a:link {
  	 
     <h1>leochras</h1>
 <p>Erbaut am: 04.04.2017</p>
+
+<img src="gradient-small.png" alt="Logo" style="width:500px;height:500px;">
 	 
 <p></p>  
 
