--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@ a:link {
 
 <div class="center">
  	 
+<style>
+body {
+  background-image: url('img_girl.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
+
     <h1>leochras</h1>
 <p>Erbaut am: 04.04.2017</p>
 
