--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body {
 	 
 	    <a href="https://twitter.com/leochras" target="_blank">Twitter<a/>
 <p></p> 
-		<a href="https://kit.com/leochras" target="_blank" >Mein Equipment</a>
+		<a href="https://kit.co/leochras" target="_blank" >Mein Equipment</a>
 <p></p>  
         <a href="https://discord.gg/R9CCATy" target="_blank" >Bester Discord Server</a>
 
